# github-issues-discord-integration

./: .gitignore  Cargo.toml
common/: Cargo.toml
common/src/: config.rs  discord_dtos.rs  github_dtos.rs  lib.rs
reminder/: Cargo.toml
reminder/src/: main.rs
webhook-daemon/: Cargo.toml
webhook-daemon/src/: github_dtos.rs  main.rs
