[package]
name = "reminder"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = {version = "1.0.48", features = ["backtrace"] }
common = { path = "../common" }
log = "0.4.14"
pretty_env_logger = "0.4.0"
reqwest = {version = "0.11.10", features = ["json", "gzip", "brotli", "deflate", "native-tls"] }
tokio = {version = "1.14.0", features = ["full", "rt-multi-thread"] }
