[package]
name = "webhook-daemon"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.0.0-beta.12"
anyhow = {version = "1.0.48", features = ["backtrace"] }
common = { path = "../common" }
log = "0.4.14"
pretty_env_logger = "0.4.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.72"
